k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: woc-panel
  namespace: wechat-on-cloud
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: wechat-on-cloud
      app.kubernetes.io/component: panel
  template:
    metadata:
      labels:
        app.kubernetes.io/name: wechat-on-cloud
        app.kubernetes.io/component: panel
    spec:
      serviceAccountName: woc-panel
      containers:
        - name: panel
          image: docker.io/gloridust/woc-panel:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
          volumeMounts:
            - name: panel-data
              mountPath: /data
      volumes:
        - name: panel-data
          persistentVolumeClaim:
            claimName: woc-panel-data
