k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: woc-panel
  namespace: wechat-on-cloud
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: wechat-on-cloud
    app.kubernetes.io/component: panel
  ports:
    - name: http
      port: 8080
      targetPort: 8080
