k8s/ingress.example.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: woc-panel
  namespace: wechat-on-cloud
spec:
  rules:
    - host: woc.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: woc-panel
                port:
                  number: 8080
